Add PUT endpoint for UserDataProviderPermission
This endpoint makes it possible for a user with appropriate permissions
to create or update a data provider permission for a given user

Issue #1250 Support associations between users and organizational entities
